added more version specific values for libs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "jansson.h": "c",
         "fetch.h": "c",
         "cerrno": "c",
-        "cpkg_main.h": "c"
+        "cpkg_main.h": "c",
+        "errno.h": "c"
     }
 }
