kept improving on the template build code, and added an extra field for the package.json file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,5 +20,7 @@
         "cerrno": "c",
         "cpkg_main.h": "c",
         "errno.h": "c"
-    }
+    },
+    "pieces.cloudCapabilities": "Blended",
+    "pieces.telemetry": true
 }
