tried to add more librarys

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,7 +25,8 @@
         "string_view": "c",
         "dirent.h": "c",
         "run.h": "c",
-        "algorithm": "c"
+        "algorithm": "c",
+        "stdbool.h": "c"
     },
     "pieces.cloudCapabilities": "Blended",
     "pieces.telemetry": true,
