--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,8 @@
         "algorithm": "c",
         "stdbool.h": "c",
         "curl.h": "c",
-        "libgen.h": "c"
+        "libgen.h": "c",
+        "sstream": "c"
     },
     "pieces.cloudCapabilities": "Blended",
     "pieces.telemetry": true,
