--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,7 +29,9 @@
         "stdbool.h": "c",
         "curl.h": "c",
         "libgen.h": "c",
-        "sstream": "c"
+        "sstream": "c",
+        "*.tcc": "c",
+        "tuple": "c"
     },
     "pieces.cloudCapabilities": "Blended",
     "pieces.telemetry": true,
