Adds Linux-specific compilation support and updates file mappings
Introduces `compile_linux.h` for Linux-specific compilation logic and removes redundant functions to streamline the compiler codebase. Updates `.vscode/settings.json` to add mappings for new header files.

These changes improve cross-platform compatibility and simplify handling of Linux-specific compilation processes.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,7 +33,9 @@
         "*.tcc": "c",
         "tuple": "c",
         "initializer_list": "c",
-        "utility": "c"
+        "utility": "c",
+        "compile_linux.h": "c",
+        "compile_utils.h": "c"
     },
     "pieces.cloudCapabilities": "Blended",
     "pieces.telemetry": true,
