Adds Windows compilation support and refines error handling
Integrates Windows-specific compilation logic to support cross-platform builds. Refines error handling messages for better clarity in directory creation failures. Improves URL processing by adding prefix checking and conditional handling for enhanced robustness.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,7 +35,8 @@
         "initializer_list": "c",
         "utility": "c",
         "compile_linux.h": "c",
-        "compile_utils.h": "c"
+        "compile_utils.h": "c",
+        "compile_windows.h": "c"
     },
     "pieces.cloudCapabilities": "Blended",
     "pieces.telemetry": true,
