Adds recursive directory inclusion and script runner support
Enhances Makefile to include source subdirectories recursively, simplifying compilation of nested files.

Introduces `kpm_script_runner` function and supporting utilities to parse and execute commands from script files, enabling dynamic script-driven workflows.

Expands supported commands with detailed descriptions in `cmds.txt`. Cleans up redundant build artifacts in Makefile.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -36,7 +36,8 @@
         "utility": "c",
         "compile_linux.h": "c",
         "compile_utils.h": "c",
-        "compile_windows.h": "c"
+        "compile_windows.h": "c",
+        "compile.h": "c"
     },
     "pieces.cloudCapabilities": "Blended",
     "pieces.telemetry": true,
