Improves project creation and memory management
Addresses memory leaks in project creation and script execution.
Ensures proper freeing of allocated memory for commands, project info,
and file data, preventing potential resource exhaustion.

Also adds a valgrind run configuration.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,7 +38,8 @@
         "compile_utils.h": "c",
         "compile_windows.h": "c",
         "compile.h": "c",
-        "types.h": "c"
+        "types.h": "c",
+        "typeinfo": "c"
     },
     "pieces.cloudCapabilities": "Blended",
     "pieces.telemetry": true,
