--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,5 +45,9 @@
     "pieces.telemetry": true,
     "cSpell.words": [
         "nesasarey"
-    ]
+    ],
+    "sonarlint.connectedMode.project": {
+        "connectionId": "WSL connction SonarCloud",
+        "projectKey": "KingVentrix007_KickStart"
+    }
 }
